# hellbox

./: .flake8  .gitattributes  .gitignore  .hadolint.yaml  .jscpd.json  .pre-commit-config.yaml  CLAUDE.md  LEGAL.md  LICENSING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  deploy.sh  findings.md  install.ps1  uninstall.ps1  uninstall.sh
.github/: dependabot.yml
.github/workflows/: capsule-prebuilt.yml  ci.yml  release.yml  validate-tap-token.yml
capsule/: Dockerfile  index.html  requirements.txt
capsule/app/: README.md
capsule/rootfs/opt/capsule/: audio_ws.py  focus.py  input_ws.py  start.sh  video_ws.py
deploy/: doom.yaml
docs/: architecture.md  cli.md  demo-media.md  generalizing.md  microvm-ground-truth.md  security.md
rs-cli/: Cargo.toml  Makefile
rs-cli/src/: aws.rs  browser.rs  config.rs  discover.rs  embedded.rs  lifecycle.rs  main.rs  poll.rs  proxy.rs  state.rs
rs-cli/src/commands/: build.rs  config_cmd.rs  deploy.rs  destroy.rs  down.rs  mod.rs  open.rs  play.rs  ps.rs  resume.rs  rm.rs  suspend.rs  up.rs
scripts/: capture-demo-media.mjs  capture-demo-media.sh  check-deps.sh  check-embedded-capsule.sh  check-precommit-pins.sh  check-release-provenance.sh  check-reqs.sh  check-uninstall-safety.sh
